# printf

./: .gitignore  PRINTF_MANUAL.md  README.md  SCANF_MANUAL.md  gen.txt  input.mmd  mermaidRenderConfig.json  package-lock.json  pyproject.toml
.github/workflows/: build.yml  publish.yml
docs/: SCANF_MANUAL.md  api.md  arch.md  srs.md
examples/: example.ipynb
itmo_ics_printf/: __init__.py  analyze.py  errors.py  events.py  plotting.py  tracelog.py
scripts/: gen.py  image_gen.sh  install_mermaid_via_npm.sh
src/itmo_ics_printf/adapters/: __init__.py  base.py  matplotlib.py  plotly.py
src/itmo_ics_printf/core/: __init__.py  datatype.py
tests/: test_analyze.py  test_core.py  test_matplotlib.py  test_plotly.py  test_plotting.py  test_tracelog.py
tests/scripts/: example_bin_file_gen.py
