[project]
name = "itmo-ics-printf"
version = "0.1.0"
description = "Visualisation and analysation tool for 'scanf' - FreeRTOS profiler grabber"
authors = [
    { name = "Alexander Nalobin" },
    { name = "Mihail Butvin" },
    { name = "Ivan Tolmachev" },
    { name = "Georgii Khabner" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.4"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
plotly = "^6.0.1"
jupyterlab = "^4.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"